Adding images to presentation instead of relying on url's. Also adding a feedback slide to the end of the presentation.

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -35,7 +35,7 @@
                 </section>
                 <section>
                     <h2>Why this presentation?</h2>
-                    <img src="http://vignette1.wikia.nocookie.net/harrypotter/images/e/e6/Tumblr_n0lq3f9gci1qdd90po8_r1_250.gif/revision/latest?cb=20140403212816" />
+                    <img src="images/devils-snare.gif" />
                     <ul>
                         <li>Poor APIs can strangle productivity</li>
                         <li>Many intelligent engineers don't always think in terms of APIs</li>
@@ -75,7 +75,7 @@
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Poor Data Types / Data Type Abuse</h2>
-                        <img src="http://i.imgur.com/XC08aVV.png" height=259 width=350 />
+                        <img src="images/overly-obsessed-girlfriend-loves-your-strings.png" height=259 width=350 />
                     </section>
                     <section>
                         <h2>Poor Data Types / Data Type Abuse</h2>
@@ -289,7 +289,7 @@ public class DayOfWeekTranslator {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Easily Misused Collections API's</h2>
-                        <img src="http://i.imgur.com/ZWCUEOD.png" height=350 width=279 />
+                        <img src="images/most-interesting-man-hates-his-consumers.png" height=350 width=279 />
                     </section>
                     <section>
                         <h2>Easily Misused Collections API's</h2>
@@ -625,7 +625,7 @@ Appointment appointment = builder.build();
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Weak Typing</h2>
-                        <img src="http://i.imgur.com/0bFY1B5.png" height=257 width=350 />
+                        <img src="images/y-u-no-strong-type.png" height=257 width=350 />
                     </section>
                     <section>
                         <h2>Weak Typing</h2>
@@ -758,7 +758,7 @@ public void consume(Appointment appointment) {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Lack of Encapsulation</h2>
-                        <img src="http://i.imgur.com/O2wXo9I.png" height=304 width=350 />
+                        <img src="images/ancient-aliens-used-encapsulation.png" height=304 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -794,7 +794,7 @@ public void consume(Appointment appointment) {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Growing Parameter List</h2>
-                        <img src="http://i.imgur.com/DXZRJY7.png" height=263 width=350 />
+                        <img src="images/the-number-of-params-is-too-damn-high.png" height=263 width=350 />
                     </section>
                     <section>
                         <h2>Growing Parameter List</h2>
@@ -923,7 +923,7 @@ public interface AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Abstraction Leaks</h2>
-                        <img src="http://i.imgur.com/YJJJ4b2.png" height=233 width=350 />
+                        <img src="images/first-world-leaked-abstraction-problems.png" height=233 width=350 />
                     </section>
                     <section>
                         <h2>Abstraction Leaks</h2>
@@ -1009,7 +1009,7 @@ public interface AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Compiling Against Implementations</h2>
-                        <img src="http://i.imgur.com/7rpoD8c.png" height=364 width=350 />
+                        <img src="images/confession-bear-enjoys-compiling-against-implementations.png" height=364 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -1125,6 +1125,25 @@ public interface AppointmentManager {
                 </section>
                 <section>
                     <h1>Questions?</h1>
+                </section>
+                <section>
+                    <h1>Please Leave Us Feedback</h1>
+                    <table>
+                        <thead>
+                            <th>1</th>
+                            <th>2</th>
+                            <th>3</th>
+                            <th>4</th>
+                            <th>5</th>
+                        </thead>
+                        <tr>
+                            <td>Very Poor</td>
+                            <td>Poor</td>
+                            <td>Fair</td>
+                            <td>Good</td>
+                            <td>Very Good</td>
+                        </tr>
+                    </table>
                 </section>
             </div>
         </div>
