--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -1123,7 +1123,7 @@ public interface AppointmentManager {
 
                 <section>
                     <section data-background-color="#4d7e65">
-                        <h2>Unnecessarily Restrictive Validation</h2>
+                        <h2>Overly Restrictive Validation</h2>
                         // TODO Include img src and dimensions as appropriate
                         <img src="" height=350 width=350 />
                         <aside class="notes">
@@ -1133,7 +1133,7 @@ public interface AppointmentManager {
                         </aside>
                     </section>
                     <section>
-                        <h2>Unnecessarily Restrictive Validation</h2>
+                        <h2>Overly Restrictive Validation</h2>
                         <ul>
                             <li>...</li>
                             <li>...</li>
@@ -1184,7 +1184,7 @@ public interface AppointmentManager {
                         </aside>
                     </section>
                     <section data-state="slide-with-code">
-                        <h2>Common Extraction Leak Examples</h2>
+                        <h2>Common Abstraction Leak Examples</h2>
                         <pre>
                             <code data-trim data-noescape>
 public interface AppointmentManager {
@@ -1208,7 +1208,7 @@ public interface AppointmentManager {
                         </pre>
                     </section>
                     <section data-state="slide-with-code">
-                        <h2>Common Extraction Leak Examples</h2>
+                        <h2>Common Abstraction Leak Examples</h2>
                         <pre>
                             <code data-trim data-noescape>
 public interface AppointmentManager {
