Adding image for overly restrictive validation section

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -1124,13 +1124,7 @@ public interface AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Overly Restrictive Validation</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
-                        <aside class="notes">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                        </aside>
+                        <img src="images/restrict-all-the-things.jpg" height=269 width=350 />
                     </section>
                     <section>
                         <h2>Overly Restrictive Validation</h2>
